[package]
name = "owmods_cli"
authors = ["Bwc9876 <bwc9876@outerwildsmods.com>"]
description = "A CLI Tool To Manage OWML Mods"
version = "0.15.1"
edition = "2021"
readme = "./README.md"
repository = "https://github.com/ow-mods/ow-mod-man/"
license = "GPL-3.0-or-later"

[dependencies]
owmods_core = { version = "0.15.1", path = "../owmods_core" }
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
anyhow = "1.0.98"
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.27", features = ["std"] }
clap_complete = "4.5.55"
serde_json = "1.0.140"

[build-dependencies]
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.55"
clap_mangen = "0.2.28"

[[bin]]
name = "owmods"
path = "src/main.rs"
