[package]
name = "owmods_core"
authors = ["Bwc9876 <bwc9876@outerwildsmods.com>"]
description = "The core library for the Outer Wilds Mod Manager"
version = "0.15.4"
edition = "2021"
readme = "./README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/ow-mods/ow-mod-man/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
opener = "0.8.3"
directories = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
glob = "0.3.3"
anyhow = "1.0.100"
zip = { version = "7.0.0", default-features = false, features = [
    "deflate",
    "zstd",
] }
futures = "0.3.31"
log = "0.4.28"
tokio = { version = "1.48.0", features = [
    "net",
    "time",
    "process",
    "macros",
    "sync",
    "io-util",
] }
serde_repr = "0.1.20"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
typeshare = "1.0.4"
lazy_static = "1.5.0"
tempfile = "3.23.0"
unicode-normalization = "0.1.24"
regex = "1.12.2"
versions = "7.0.0"

[dev-dependencies]
tokio-test = "0.4.4"
